--- a/ledger.css
+++ b/ledger.css
@@ -1,1 +1,40 @@
-/* CSS declarations go here */
+.tt-input,
+.tt-hint {
+
+}
+
+.tt-input {
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.tt-hint {
+  color: #999
+}
+
+.tt-dropdown-menu {
+  width: 100%;
+  margin-top: 5px;
+  padding: 3px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.tt-suggestion {
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 22px;
+  padding: 3px 20px;
+}
+
+.tt-suggestion.tt-cursor { 
+  color: #fff;
+  background-color: #0097cf;
+
+}
+
+.tt-suggestion p {
+  margin: 0;
+}
