Adds workable header
Adds formatting to header, still needs some work

--- a/ledger.less
+++ b/ledger.less
@@ -100,3 +100,28 @@ button {
 .tt-suggestion p {
   margin: 0;
 }
+
+#ledger-table {
+  thead {
+    background-color: #5b4282;
+    color: #f8f3ff;
+
+    tr {
+      height: 40px;
+
+      th {
+        padding: .75em 1.5em;
+      }
+    }
+  }
+
+  .btn-default {
+    color: #666;
+  }
+
+  .active {    
+    background-color: #5cb85c;
+    color: #fff;
+    border-color: #4cae4c;
+  }
+}
