--- a/ledger.less
+++ b/ledger.less
@@ -2,6 +2,45 @@ button {
   outline: none !important;
 }
 
+
+.table > thead > tr > td.danger, 
+.table > tbody > tr > td.danger, 
+.table > tfoot > tr > td.danger, 
+.table > thead > tr > th.danger, 
+.table > tbody > tr > th.danger, 
+.table > tfoot > tr > th.danger,
+.table > thead > tr.danger > td, 
+.table > tbody > tr.danger > td, 
+.table > tfoot > tr.danger > td, 
+.table > thead > tr.danger > th, 
+.table > tbody > tr.danger > th, 
+.table > tfoot > tr.danger > th {
+  background-color: rgba(217,83,79,.7);
+  // background-color: inherit; //rgba(217,83,79,.7);
+  // input {
+  //   color: rgb(217,83,79) !important;
+  // }
+}
+
+.table > thead > tr > td.success, 
+.table > tbody > tr > td.success, 
+.table > tfoot > tr > td.success, 
+.table > thead > tr > th.success, 
+.table > tbody > tr > th.success, 
+.table > tfoot > tr > th.success,
+.table > thead > tr.success > td, 
+.table > tbody > tr.success > td, 
+.table > tfoot > tr.success > td, 
+.table > thead > tr.success > th, 
+.table > tbody > tr.success > th, 
+.table > tfoot > tr.success > th {
+  background-color: rgba(92,184,92,.7);
+  // background-color: inherit;
+  // input {
+  //   color: rgb(92,184,92) !important;
+  // }
+}
+
 .undo-overlay {
   background-color: rgba(217,83,79,.7);
   width: 0px;
@@ -37,7 +76,7 @@ button {
   width: 100%;
   height: 0px;
   left: -11px;
-  top: 19px;
+  top: 20px;
     transition-timing-function: linear;
   -webkit-transition-timing-function: linear;
 }
@@ -45,13 +84,13 @@ button {
 .undo-timer {
   transition-timing-function: linear;
   -webkit-transition-timing-function: linear;
-  -webkit-transition: width 10s; /* Safari */
-  transition: width 10s;  
+  -webkit-transition: width 6s; /* Safari */
+  transition: width 6s;  
   position: absolute;
   width: 0px;
   height: 5px;
-  border-radius: 0 0 3px 3px;
-  background-color: #d2322d;
+  border-radius: 0;
+  background-color: #d43f3a;
 }
 
 .undo-timer-end {
@@ -66,7 +105,12 @@ button {
 }
 
 .tt-input {
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  // box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;
+  // &:active {
+  //     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  //     // box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  //       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;
+  //   }
 }
 
 .tt-hint {
@@ -117,8 +161,6 @@ button {
 #ledger-table {
   thead {
     display: none;
-
-
   }
 
   .btn-default {
@@ -129,5 +171,22 @@ button {
     background-color: #5cb85c;
     color: #fff;
     border-color: #4cae4c;
+  }
+
+  input {
+    background-color: transparent !important;
+    color: white;
+    // -webkit-appearance: none;
+    cursor: pointer;
+      box-shadow: none;
+    
+    &::selection {
+      background-color: #f0ad4e;
+    }
+
+    &:active, &:focus, .active {
+      -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0, 0, 0, 0.6);
+      box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0, 0, 0, 0.6);
+    }    
   }
 }
