--- a/client/templates/ledger.html
+++ b/client/templates/ledger.html
@@ -3,62 +3,74 @@
   <title>Simple Ledger</title>
 </head>
 
-<body style="margin: 10px;">
-  <nav class="navbar navbar-default navbar-fixed-top" style="padding-top: 5px; border-bottom-width: 0px;">
+<body>
+  <nav id="page-header" class="navbar navbar-default navbar-fixed-top" style="line-height: 5em; box-shadow: 1px 5px 7px rgba(0,0,0,0.25);">
     <div class="container">
-      <h4 style="float:left; clear: right;">{{> loginButtons}}</h4>
 
-      {{#if currentUser}}
-      <div class="row">          
-        <div class="col-md-1">          
+      <div class="row">  
+        <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">  
+          <h4 class="text-left">{{> loginButtons}}</h4>
+        </div>
+        {{#if currentUser}}
+        
+        <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">          
           <button type="button" class="btn btn-primary previous">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> {{prevMonth}}
           </button>
         </div>  
 
-        <div class="col-md-2"><h3 style="margin-top: 10px;">{{month}}</h3></div>
+        <div class="col-lg-3 col-md-3 col-sm-8 col-xs-6"><h3 class="text-center">{{month}}</h3></div>
 
-        <div class="col-md-1">
+        <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3 text-right">
           <button type="button" class="btn btn-primary next">{{nextMonth}}
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
           </button>
         </div>
 
-        <div class="col-md-2"><h5>Bank Total: {{bankTotal}}</h5></div>
-        <div class="col-md-2"><h5>User's Total: {{predictedTotal}}</h5></div>
+        <div class="col-lg-2 col-md-offset-1 col-md-2 col-sm-6 col-xs-6 "><h5>Bank Total: {{bankTotal}}</h5></div>
+        <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6 "><h5>User's Total: {{predictedTotal}}</h5></div>
 
-        <div class="col-md-2">
+  <!--       <div class="hidden-sm hidden-xs hidden-md">
           <button id='addTransaction' class="btn btn-success">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
           </button>
-        </div>
+        </div> -->
+        {{/if}}
       </div>
+
+      {{#if currentUser}}
 
       <div class="row">  
         <div class="col-md-12">
       
-          <table id="ledger-table-header">
+          <table id="ledger-table-header" style="line-height: 1em;">
             <thead>
               <tr>
                 <th>Vendor</th>
                 <th>Category</th>
                 <th>Amount</th>
                 <th>Date</th>
-                <th></th>
-                <th></th>
+                <th style="width:10%;"></th>
+                <th style="width:10%;">
+                  <button id='addTransaction' class="btn btn-sm btn-success">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
+                  </button>
+                </th>
               </tr>
             </thead>
           </table>
         </div>
       </div>
-    {{/if}}
+      {{else}}
+        Please login to continue
+      {{/if}}
+
     </div>
 
   </nav>
 
 
-  <div class="container-fluid" style="margin-top: 120px;">
-
+  <div class="container-fluid">
 
    <!--  <div class="page-header" style="width: 100%; background-color: #5b4282; color: white; margin: 0 -25px; position:fixed; top: 0;">
 
@@ -104,9 +116,9 @@
       <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
     </button>
     <!-- <button type="button" class="btn btn-default  trans-form {{#if recurring}}active{{/if}}" data-trans-id="{{_id}}" data-field="recurring">R</button> -->
-    <button type="button" class="btn btn-default trans-form {{#if deposit}}active{{/if}}" data-trans-id="{{_id}}" data-field="deposit">
+<!--     <button type="button" class="btn btn-default trans-form {{#if deposit}}active{{/if}}" data-trans-id="{{_id}}" data-field="deposit">
       <span class="glyphicon glyphicon-usd" aria-hidden="true"></span>
-    </button>
+    </button> -->
   </div>
 </template>
 
