Change input from number to text

--- a/client/templates/ledger.html
+++ b/client/templates/ledger.html
@@ -99,7 +99,7 @@
 </template>
 
 <template name="amount">
-  <input type="number" class="trans-form form-control" placeholder="$0.00" value="{{formattedAmount}}" data-trans-id="{{_id}}" data-field="amount">
+  <input type="text" class="trans-form form-control" placeholder="$0.00" value="{{formattedAmount}}" data-trans-id="{{_id}}" data-field="amount">
 </template>
 
 <template name="date"> 
