--- a/client/stylesheets/ledger.less
+++ b/client/stylesheets/ledger.less
@@ -34,43 +34,46 @@ button {
   outline: none !important;
 }
 
-.table > thead > tr > td.danger, 
-.table > tbody > tr > td.danger, 
-.table > tfoot > tr > td.danger, 
-.table > thead > tr > th.danger, 
-.table > tbody > tr > th.danger, 
-.table > tfoot > tr > th.danger,
-.table > thead > tr.danger > td, 
-.table > tbody > tr.danger > td, 
-.table > tfoot > tr.danger > td, 
-.table > thead > tr.danger > th, 
-.table > tbody > tr.danger > th, 
-.table > tfoot > tr.danger > th {
-  background-color: rgba(217,83,79,.7);
-  // background-color: inherit; //rgba(217,83,79,.7);
-  // input {
-  //   color: rgb(217,83,79) !important;
-  // }
-}
+// .table > thead > tr > td.danger, 
+// .table > tbody > tr > td.danger, 
+// .table > tfoot > tr > td.danger, 
+// .table > thead > tr > th.danger, 
+// .table > tbody > tr > th.danger, 
+// .table > tfoot > tr > th.danger,
+// .table > thead > tr.danger > td, 
+// .table > tbody > tr.danger > td, 
+// .table > tfoot > tr.danger > td, 
+// .table > thead > tr.danger > th, 
+// .table > tbody > tr.danger > th, 
+// .table > tfoot > tr.danger > th {
+//   background-color: rgba(217,83,79,.7);
+//   // background-color: transparent; //rgba(217,83,79,.7);
+//   // &:active, &:hover, tr {
+//   //   background-color: transparent;
+//   // }
+//   // input {
+//   //   color: rgb(217,83,79) !important;
+//   // }
+// }
 
-.table > thead > tr > td.success, 
-.table > tbody > tr > td.success, 
-.table > tfoot > tr > td.success, 
-.table > thead > tr > th.success, 
-.table > tbody > tr > th.success, 
-.table > tfoot > tr > th.success,
-.table > thead > tr.success > td, 
-.table > tbody > tr.success > td, 
-.table > tfoot > tr.success > td, 
-.table > thead > tr.success > th, 
-.table > tbody > tr.success > th, 
-.table > tfoot > tr.success > th {
-  background-color: rgba(92,184,92,.7);
-  // background-color: inherit;
-  // input {
-  //   color: rgb(92,184,92) !important;
-  // }
-}
+// .table > thead > tr > td.success, 
+// .table > tbody > tr > td.success, 
+// .table > tfoot > tr > td.success, 
+// .table > thead > tr > th.success, 
+// .table > tbody > tr > th.success, 
+// .table > tfoot > tr > th.success,
+// .table > thead > tr.success > td, 
+// .table > tbody > tr.success > td, 
+// .table > tfoot > tr.success > td, 
+// .table > thead > tr.success > th, 
+// .table > tbody > tr.success > th, 
+// .table > tfoot > tr.success > th {
+//   background-color: rgba(92,184,92,.7);
+//   // background-color: inherit;
+//   // input {
+//   //   color: rgb(92,184,92) !important;
+//   // }
+// }
 
 .undo-overlay {
   // background-color: rgba(217,83,79,.7);
@@ -235,8 +238,13 @@ div.datepicker {
 
   .recurring.active {
     background-color: #5C96B8;
-    border-color: darken(#5C92B8, 10%);
+    border-color: #5C96B8;
   }
+
+  input::-webkit-input-placeholder {
+    color: rgba(160,160,160,0.75) !important;
+  }
+
 
   input {
     background-color: transparent !important;
@@ -246,17 +254,27 @@ div.datepicker {
     box-shadow: none;
     
     &::selection {
-      background-color: #f0ad4e;
+      background-color: rgba(76, 107, 138, 0.98);
     }
 
     &:active, &:focus, .active {
       -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0, 0, 0, 0.6);
       box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0, 0, 0, 0.6);
-    }    
+    }
+    
+    &.green-text {
+      color: #4cae4c !important;
+    }  
   }
 
-
-  
+  tr {
+    &.red-text {
+      input {
+        color: rgb(217,83,79);
+   
+      }
+    }
+  }  
 }
 
 @media (max-width: @screen-xs-max) {
