--- a/client/stylesheets/ledger.less
+++ b/client/stylesheets/ledger.less
@@ -34,17 +34,17 @@ button {
   outline: none !important;
 }
 
-// .table > thead > tr > td.danger, 
-// .table > tbody > tr > td.danger, 
-// .table > tfoot > tr > td.danger, 
-// .table > thead > tr > th.danger, 
-// .table > tbody > tr > th.danger, 
+// .table > thead > tr > td.danger,
+// .table > tbody > tr > td.danger,
+// .table > tfoot > tr > td.danger,
+// .table > thead > tr > th.danger,
+// .table > tbody > tr > th.danger,
 // .table > tfoot > tr > th.danger,
-// .table > thead > tr.danger > td, 
-// .table > tbody > tr.danger > td, 
-// .table > tfoot > tr.danger > td, 
-// .table > thead > tr.danger > th, 
-// .table > tbody > tr.danger > th, 
+// .table > thead > tr.danger > td,
+// .table > tbody > tr.danger > td,
+// .table > tfoot > tr.danger > td,
+// .table > thead > tr.danger > th,
+// .table > tbody > tr.danger > th,
 // .table > tfoot > tr.danger > th {
 //   background-color: rgba(217,83,79,.7);
 //   // background-color: transparent; //rgba(217,83,79,.7);
@@ -56,17 +56,17 @@ button {
 //   // }
 // }
 
-// .table > thead > tr > td.success, 
-// .table > tbody > tr > td.success, 
-// .table > tfoot > tr > td.success, 
-// .table > thead > tr > th.success, 
-// .table > tbody > tr > th.success, 
+// .table > thead > tr > td.success,
+// .table > tbody > tr > td.success,
+// .table > tfoot > tr > td.success,
+// .table > thead > tr > th.success,
+// .table > tbody > tr > th.success,
 // .table > tfoot > tr > th.success,
-// .table > thead > tr.success > td, 
-// .table > tbody > tr.success > td, 
-// .table > tfoot > tr.success > td, 
-// .table > thead > tr.success > th, 
-// .table > tbody > tr.success > th, 
+// .table > thead > tr.success > td,
+// .table > tbody > tr.success > td,
+// .table > tfoot > tr.success > td,
+// .table > thead > tr.success > th,
+// .table > tbody > tr.success > th,
 // .table > tfoot > tr.success > th {
 //   background-color: rgba(92,184,92,.7);
 //   // background-color: inherit;
@@ -93,7 +93,7 @@ button {
 
 .undo-overlay .undo {
   -webkit-transition: width 0s; /* Safari */
-  transition: width 0s;  
+  transition: width 0s;
   width: 57px;
   float: right;
   margin: -3px 10px;
@@ -102,7 +102,7 @@ button {
 
 .show-overlay {
   -webkit-transition: width 1s; /* Safari */
-  transition: width 1s;  
+  transition: width 1s;
   height: 39px;
   right: 25px;
 }
@@ -121,7 +121,7 @@ button {
   transition-timing-function: linear;
   -webkit-transition-timing-function: linear;
   -webkit-transition: width 6s; /* Safari */
-  transition: width 6s;  
+  transition: width 6s;
   position: absolute;
   width: 0px;
   height: 31px;
@@ -175,7 +175,7 @@ button {
   padding: 3px 20px;
 }
 
-.tt-suggestion.tt-cursor { 
+.tt-suggestion.tt-cursor {
   color: #fff;
   background-color: #0097cf;
 
@@ -230,7 +230,7 @@ div.datepicker {
     color: #666;
   }
 
-  .active {    
+  .active {
     background-color: #5cb85c;
     color: #fff;
     border-color: #4cae4c;
@@ -252,7 +252,7 @@ div.datepicker {
     // -webkit-appearance: none;
     cursor: pointer;
     box-shadow: none;
-    
+
     &::selection {
       background-color: rgba(76, 107, 138, 0.98);
     }
@@ -261,20 +261,20 @@ div.datepicker {
       -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0, 0, 0, 0.6);
       box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0, 0, 0, 0.6);
     }
-    
+
     &.green-text {
       color: #4cae4c !important;
-    }  
+    }
   }
 
   tr {
-    &.red-text {
+    &.yellow-text {
       input {
-        color: rgb(217,83,79);
-   
+        color: #d8bb64;
+
       }
     }
-  }  
+  }
 }
 
 @media (max-width: @screen-xs-max) {
@@ -307,7 +307,7 @@ div.datepicker {
   }
 }
 
-@media (min-width: @screen-lg-min) { 
+@media (min-width: @screen-lg-min) {
   .container-fluid {
     margin-top: 115px;
   }
@@ -316,5 +316,3 @@ div.datepicker {
     margin-top: 115px;
   }
 }
-
-
