Fix typeahead style

--- a/client/stylesheets/ledger.less
+++ b/client/stylesheets/ledger.less
@@ -157,7 +157,7 @@ button {
   color: #999
 }
 
-.tt-dropdown-menu {
+.tt-menu {
   width: 100%;
   margin-top: 5px;
   padding: 3px 0;
@@ -173,12 +173,11 @@ button {
   font-size: 14px;
   line-height: 22px;
   padding: 3px 20px;
-}
 
-.tt-suggestion.tt-cursor {
-  color: #fff;
-  background-color: #0097cf;
-
+  &:hover {
+      color: #fff;
+      background-color: #0097cf;
+  }
 }
 
 .tt-suggestion p {
