Working version with 90% in imports

--- a/imports/ui/stylesheets/ledger.less
+++ b/imports/ui/stylesheets/ledger.less
@@ -1,4 +1,4 @@
-@import '../lib/custom.bootstrap.less';
+@import './custom-bootstrap/custom.bootstrap.less';
 
 .headroom {
     -webkit-transition: transform 200ms linear;
