--- a/imports/ui/stylesheets/ledger.less
+++ b/imports/ui/stylesheets/ledger.less
@@ -1,29 +1,5 @@
 @import './custom-bootstrap/custom.bootstrap.less';
 
-.headroom {
-    -webkit-transition: transform 200ms linear;
-    -moz-transition: transform 200ms linear;
-    -ms-transition: transform 200ms linear;
-    -o-transition: transform 200ms linear;
-    transition: transform 200ms linear;
-}
-.headroom--pinned {
-    -webkit-transform: translateY(0%);
-    -moz-transform: translateY(0%);
-    -ms-transform: translateY(0%);
-    -o-transform: translateY(0%);
-    transform: translateY(0%);
-
-}
-.headroom--unpinned {
-    -webkit-transform: translateY(-72%);
-    -moz-transform: translateY(-72%);
-    -ms-transform: translateY(-72%);
-    -o-transform: translateY(-72%);
-    transform: translateY(-72%);
-
-}
-
 #search {
   background-color: rgba(0,0,0,0.1);
   color: #fff;
@@ -251,7 +227,41 @@ div.datepicker {
   }
 }
 
+#headroom-transition {
+    -webkit-transition: transform 200ms linear;
+    -moz-transition: transform 200ms linear;
+    -ms-transition: transform 200ms linear;
+    -o-transition: transform 200ms linear;
+    transition: transform 200ms linear;
+}
+
+.headroom-transform(@percentage) {
+    -webkit-transform: translateY(@percentage);
+    -moz-transform: translateY(@percentage);
+    -ms-transform: translateY(@percentage);
+    -o-transform: translateY(@percentage);
+    transform: translateY(@percentage);
+}
+
+.headroom {
+    #headroom-transition;
+    z-index: 999;
+}
+
+.headroom--pinned {
+    .headroom-transform(0%);
+}
+
+.headroom--unpinned {
+    .headroom-transform(-67%);
+}
+
+// 0px - 767px
 @media (max-width: @screen-xs-max) {
+  .headroom--unpinned {
+      .headroom-transform(-77%);
+  }
+
   .container-fluid.ledger-container {
     margin-top: 185px;
   }
@@ -274,7 +284,12 @@ div.datepicker {
   }
 }
 
+// 768px - 992px
 @media (min-width: @screen-sm-min) {
+  .headroom--unpinned {
+      .headroom-transform(-76%);
+  }
+
   .container-fluid.ledger-container {
     margin-top: 185px;
   }
@@ -283,8 +298,12 @@ div.datepicker {
     margin-top: 185px;
   }
 }
-
+// 992px - 1200px
 @media (min-width: @screen-md-min) {
+  .headroom--unpinned {
+      .headroom-transform(-70%);
+  }
+
   .container-fluid.ledger-container {
     margin-top: 147px;
   }
@@ -294,10 +313,15 @@ div.datepicker {
   }
 }
 
+// 1200px and up
 @media (min-width: @screen-lg-min) {
+  .headroom--unpinned {
+      .headroom-transform(-58%);
+  }
+
   .container-fluid.ledger-container {
     margin-top: 105px;
-}
+  }
 
   div.datepicker {
     margin-top: 105px;
