Finish abstracting the ui components

--- a/imports/ui/layouts/app-body.html
+++ b/imports/ui/layouts/app-body.html
@@ -1,143 +1,11 @@
 <template name='App_body'>
-    <nav id="page-header" class="navbar navbar-default navbar-fixed-top" style="line-height: 5em; box-shadow: 1px 5px 7px rgba(0,0,0,0.25);">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
-                    <h4 class="text-left">{{> loginButtons}}</h4>
-                </div>
-                {{#if currentUser}}
-                    <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
-                        <button type="button" class="btn btn-primary previous">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> {{prevMonth}}
-                        </button>
-                    </div>
-
-                    <div class="col-lg-3 col-md-3 col-sm-8 col-xs-6"><h3 class="text-center">{{month}}</h3></div>
-
-                    <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3 text-right">
-                        <button type="button" class="btn btn-primary next">{{nextMonth}}
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        </button>
-                    </div>
-
-                    <div class="col-lg-2 col-md-offset-1 col-md-2 col-sm-6 col-xs-6 "><h5>Bank Total: {{bankTotal}}</h5></div>
-                    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6 "><h5>User's Total: {{userTotal}}</h5></div>
-                {{/if}}
-            </div>
-
-            {{#if currentUser}}
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="datepicker-container-5s"></div>
-
-                        <table id="ledger-table-header" class='table table-condensed' style="line-height: 1em;">
-                            <thead>
-                                <tr>
-                                    <th>Vendor</th>
-                                    <!-- {{#if notPhone}} -->
-                                    <th class='visible-sm visible-md visible-lg'>Category</th>
-                                    <!-- {{/if}} -->
-                                    <th>Amount</th>
-                                    <!-- {{#if notPhone}} -->
-                                    <th class='visible-sm visible-md visible-lg'>Date</th>
-                                    <!-- {{/if}} -->
-
-                                    <th>
-                                        <input id='search' type='text' class='form-control input-sm' placeholder='Search'/>
-                                    </th>
-                                    <th style="">
-                                        <button id='addTransaction' class="btn btn-sm btn-success">
-                                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
-                                        </button>
-                                    </th>
-                                </tr>
-                            </thead>
-                        </table>
-                    </div>
-                </div>
-            {{else}}
-                Please login to continue
-            {{/if}}
-
-        </div>
-    </nav>
+    {{> header}}
 
     <div class="container-fluid ledger-container">
         {{#if currentUser}}
-            {{> ledger}}
+                {{> ledger}}
         {{/if}}
     </div>
 
-    {{invokeDatepickerAfterLoad}}
-</template>
-
-<template name="ledger">
-  <!-- {{> reactiveTable collection=transactions query settings=tableSettings}} -->
-  <!--       class: "table table-condensed table-hover table-striped",
-      id: 'ledger-table' -->
-  <table id='ledger-table' class='table table-condensed table-hover table-striped'>
-    <thead></thead>
-    <tbody>
-      {{#each transactions query=query}}
-      <tr class="{{rowClass}}">
-        <td>{{>vendor}}</td>
-        <td class='visible-sm visible-md visible-lg'>{{>category}}</td>
-        <td>{{>amount}}</td>
-        <td class='visible-sm visible-md visible-lg'>{{>date}}</td>
-        <td style='min-width: 110px'>{{>crd}}</td>
-        <td>{{>deleteRow}}</td>
-      </tr>
-      {{/each}}
-    </tbody>
-  </table>
-</template>
-
-<template name="vendor">
-  <input type="text" class="form-control input-sm typeahead vendor" name="vendor"
-    placeholder="Vendor" autocomplete="off" spellcheck="off"
-    value="{{vendor}}" data-trans-id="{{_id}}" data-field="vendor"
-    data-source="vendors">
-</template>
-
-<template name="category">
-  <input type="text" class="form-control  input-sm typeahead category" name="category"
-    placeholder="Category" autocomplete="off" spellcheck="off"
-    value="{{category}}" data-trans-id="{{_id}}" data-field="category"
-    data-source="categories">
-</template>
-
-<template name="amount">
-  <input type="text" class="trans-form form-control input-sm amount {{credit}}" placeholder="$0.00" value="{{formattedAmount}}" data-trans-id="{{_id}}" data-field="amount">
-</template>
-
-<template name="date">
-  <input type="text" readonly class="trans-form form-control input-sm datepicker date" placeholder="{{date}}" value="{{date}}" data-trans-id="{{_id}}" data-field="date">
-</template>
-
-<template name="crd">
-  <div class="btn-group" role="group" aria-label="...">
-    <button type="button" class="btn btn-default btn-sm trans-form {{#if cleared}}active{{/if}} cleared" data-trans-id="{{_id}}" data-field="cleared">
-      <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-    </button>
-    <button type="button" class="btn btn-default btn-sm trans-form {{#if recurring}}active{{/if}} recurring" data-trans-id="{{_id}}" data-field="recurring">
-      <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-    </button>
-    <button type="button" class="btn btn-default btn-sm trans-form {{#if deposit}}active{{/if}} deposit" data-trans-id="{{_id}}" data-field="deposit">
-      <span class="glyphicon glyphicon-usd" aria-hidden="true"></span>
-    </button>
-  </div>
-</template>
-
-<template name='deleteRow'>
-  <button type="button" class="btn btn-danger btn-sm delete" data-trans-id="{{_id}}">
-    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-  </button>
-  <div class="undo-overlay">
-    <div class='btn btn-sm btn-primary undo' data-trans-id="{{_id}}">
-      <div class="undo-timer-wrapper">
-        <div class="undo-timer"></div>
-      </div>
-      Undo
-    </div>
-  </div>
+    <!-- {{invokeDatepickerAfterLoad}} -->
 </template>
